# Make-Money-Easy

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: deps.py  router.py
app/core/: enums.py  security.py
app/db/: session.py
app/jobs/: run_automation.py  run_signals.py  scheduler.py  sync_history.py  sync_stocks.py  sync_workspace_data.py
app/schemas/: job.py  market.py  portfolio.py  stock.py  strategy.py  user.py  watchlist.py
app/services/: automation_service.py  backtest_service.py  etf_constituent_service.py  job_logging_service.py  market_data_service.py  market_service.py  order_service.py  portfolio_service.py  position_sizing_service.py  strategy_service.py  sync_progress_service.py  trading_calendar_service.py  twstock_client.py  user_service.py  watchlist_service.py
app/strategies/: base.py  hybrid_tw_strategy.py  larry_connors_rsi2_strategy.py  twstock_adapter.py  (+2 more)
data/: app.db  app.db-shm  app.db-wal
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
scripts/: init_db.py  run_dev.py  run_scheduler.py  sync_history_range.py
tests/: __init__.py  conftest.py  test_automation.py  test_backtests.py  test_db_session.py  test_job_logging.py  test_jobs.py  test_market_watchlist.py  test_momentum_breakout_strategy.py  test_position_sizing.py  test_resilient_market_data.py  test_stock_lookup_and_strategy_catalog.py  test_stocks.py  test_strategy_run.py  test_trading_calendar.py  test_users_auth.py
(+44 files in other folders)
